force-app/main/default/objects/RecommendedProduct__c/RecommendedProduct__c.object-meta.xml
<CustomObject>
    <label>Recommended Product</label>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Recommended Product Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommended Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>