force-app/main/default/objects/RecommendedProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Recommended Products (Product)</relationshipLabel>
    <relationshipName>Recommended_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>