force-app/main/default/objects/RecommendedProduct__c/fields/ReferenceProduct__c.field-meta.xml
<CustomField>
    <fullName>ReferenceProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Recommended Products</relationshipLabel>
    <relationshipName>Recommended_Products</relationshipName>
    <type>Lookup</type>
</CustomField>